chapters/07-observability/manifests/grafana/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: grafana
  labels:
    app: grafana
