chapters/07-observability/manifests/grafana/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana
  namespace: grafana
  labels:
    app: grafana
spec:
  to:
    kind: Service
    name: financeflow-grafana-service
  port:
    targetPort: grafana
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
